<resources>
    <string name="app_name">Audio Client</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_audio_library">AudioLibrary</string>

    <string name="permission_storage_manager_denied">Read storage permission was
            denied. Please consider granting it in order to access the Storage!</string>

    <string name="permission_storage_manager_never_ask_again">Read storage permission was
            denied with never ask again.</string>

    <string name="name">new audio book</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="full_time">99:99</string>
    <string name="current_time">00:00</string>

    <string name="fast_forward">Skip forward(sec)</string>
    <string name="fast_back">Skip back(sec)</string>
    <string name="play_speed">Play speed</string>
    <string-array name="play_speed">
        <item>1x</item>
        <item>0,5x</item>
        <item>1,5x</item>
        <item>2x</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="night_mode">Night Mode</string>
</resources>
