<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MediaPlayerFragment">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backColor">

        <ImageView
            android:id="@+id/book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/full_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_photo_size_select_actual_black_24dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/seekBar"
            app:layout_constraintTop_toBottomOf="@+id/book" />

        <TextView
            android:id="@+id/full_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="@string/full_time"
            app:layout_constraintBottom_toTopOf="@id/seekBar"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/current_time"
            app:layout_constraintBottom_toTopOf="@id/seekBar"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="RtlSymmetry" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backColor"
            android:max="100"
            android:progress="0"
            app:layout_constraintBottom_toTopOf="@id/down_bar" />

        <LinearLayout
            android:id="@+id/down_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:gravity="center_horizontal"
            android:paddingBottom="48dp"
            android:paddingTop="48dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:src="@drawable/ic_fast_rewind_black_24dp"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/playButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:src="@drawable/ic_play_circle_filled_black_24dp"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/nextButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:src="@drawable/ic_fast_forward_black_24dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>